--- a/ph1.html
+++ b/ph1.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <p>
-            love all serve all
+            <b>love all </b> serve all
         </p>
     </body>
 </html>
